k8s/browserless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
spec:
  selector:
    matchLabels:
      name: browserless
  template:
    metadata:
      labels:
        name: browserless
    spec:
      containers:
        - name: browserless
          image: browserless/chrome
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: browserless
spec:
  selector:
    name: browserless
  ports:
    - port: 3000
      targetPort: 3000
