k8s/sykes-calendar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sykes-calendar
spec:
  selector:
    matchLabels:
      name: sykes-calendar
  template:
    metadata:
      labels:
        name: sykes-calendar
    spec:
      containers:
        - name: sykes-calendar
          image: sykes-calendar
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sykes-calendar
spec:
  selector:
    name: sykes-calendar
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
