k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: sykes.midz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sykes-calendar
                port:
                  number: 80
