k8s/nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  defaultBackend:
    service:
      name: sykes-calendar
      port:
        number: 80
